add default config options for admin user

--- a/collectors/python.d.plugin/proxysql/proxysql.conf
+++ b/collectors/python.d.plugin/proxysql/proxysql.conf
@@ -95,3 +95,24 @@ tcpipv6:
   pass     : 'stats'
   host     : '::1'
   port     : '3306'
+
+tcp_admin:
+  name     : 'local'
+  user     : 'admin'
+  pass     : 'admin'
+  host     : 'localhost'
+  port     : '3306'
+
+tcpipv4_admin:
+  name     : 'local'
+  user     : 'admin'
+  pass     : 'admin'
+  host     : '127.0.0.1'
+  port     : '6032'
+
+tcpipv6_admin:
+  name     : 'local'
+  user     : 'admin'
+  pass     : 'admin'
+  host     : '::1'
+  port     : '3306'
